syntax = "proto3";

package com.example.calculator;

option java_multiple_files = true;
option java_package = "com.example.calculator";
option java_outer_classname = "CalculatorProto";

service CalculatorService {
  rpc Add(AddRequest) returns (AddResponse) {}
  rpc Subtract(SubtractRequest) returns (SubtractResponse) {}
  rpc Multiply(MultiplyRequest) returns (MultiplyResponse) {}
  rpc Divide(DivideRequest) returns (DivideResponse) {}
}

message AddRequest {
  int32 operand1 = 1;
  int32 operand2 = 2;
}

message AddResponse {
  int32 result = 1;
}

message SubtractRequest {
  int32 operand1 = 1;
  int32 operand2 = 2;
}

message SubtractResponse {
  int32 result = 1;
}

message MultiplyRequest {
  int32 operand1 = 1;
  int32 operand2 = 2;
}

message MultiplyResponse {
  int32 result = 1;
}

message DivideRequest {
  int32 operand1 = 1;
  int32 operand2 = 2;
}

message DivideResponse {
  float result = 1;
}